WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227979
The fast text codepath does not handle run initial advances
https://bugs.webkit.org/show_bug.cgi?id=227979
Summary
The fast text codepath does not handle run initial advances
Myles C. Maxfield
Reported
2021-07-14 23:14:51 PDT
The fast text codepath does not handle run initial advances
Attachments
Patch
(17.26 KB, patch)
2021-07-14 23:15 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(18.98 KB, patch)
2021-07-14 23:29 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
WIP
(28.41 KB, patch)
2021-07-19 23:34 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(25.36 KB, patch)
2021-07-25 16:58 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(25.33 KB, patch)
2021-07-25 17:08 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(27.45 KB, patch)
2021-07-25 18:49 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-07-14 23:15:22 PDT
Created
attachment 433562
[details]
Patch
Myles C. Maxfield
Comment 2
2021-07-14 23:15:43 PDT
Comment on
attachment 433562
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=433562&action=review
> Source/WebCore/platform/graphics/ComplexTextController.cpp:725 > + // FIXME: The initial advance needs to be added to the visually previous glyph's advance, not the current glyph's advance.
This might actually be false 🤔
Myles C. Maxfield
Comment 3
2021-07-14 23:29:40 PDT
Created
attachment 433564
[details]
Patch
Myles C. Maxfield
Comment 4
2021-07-19 22:20:13 PDT
Comment on
attachment 433562
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=433562&action=review
>> Source/WebCore/platform/graphics/ComplexTextController.cpp:725 >> + // FIXME: The initial advance needs to be added to the visually previous glyph's advance, not the current glyph's advance. > > This might actually be false 🤔
It isn't false.
Myles C. Maxfield
Comment 5
2021-07-19 23:34:24 PDT
Created
attachment 433851
[details]
WIP
Radar WebKit Bug Importer
Comment 6
2021-07-21 23:15:17 PDT
<
rdar://problem/80942757
>
Myles C. Maxfield
Comment 7
2021-07-25 16:58:42 PDT
Created
attachment 434184
[details]
Patch
Myles C. Maxfield
Comment 8
2021-07-25 17:08:37 PDT
Created
attachment 434185
[details]
Patch
Myles C. Maxfield
Comment 9
2021-07-25 18:49:23 PDT
Created
attachment 434188
[details]
Patch
EWS
Comment 10
2021-08-19 21:53:29 PDT
Committed
r281294
(
240718@main
): <
https://commits.webkit.org/240718@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434188
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug